# snowflake-cortex-agent-mcp-server

./: .dockerignore  .env.template  .gitignore  Dockerfile  LICENSE  README.md  Taskfile.yml  payload_util.py  pyproject.toml  server.py
.github/workflows/: docker-build-push.yml  main.yml  pr.yml  release.yml
scripts/: pat.sh  prepare.sh  setup.sh  setup.sql
scripts/data/: support_tickets.yaml
src/snowflake_cortex_agent/: __init__.py  __main__.py  server.py
templates/: agent_run.json.j2
