[project]
name = "snowflake-cortex-agent"
version = "0.0.1"
description = "A Model Context Protocol (MCP) server for working with Snowflake Cortex Agents."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "ASL-2" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "mcp[cli]>=1.9.4",
    "python-dotenv>=1.1.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]

[project.scripts]
snowflake-cortex-agent = "snowflake_cortex_agent:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/snowflake_cortex_agent"]

[tool.uv]
dev-dependencies = ["ruff>=0.7.3"]